@@ -25,25 +25,21 @@
 # Boston, MA 02110-1301 USA.
 
 def inventory_df_netapp(info):
-    inventory = []
+    mplist = []
     for volume, size_kb, used_kb in info:
         if saveint(size_kb) > 0: # Exclude filesystems with zero size (some snapshots)
-            inventory.append((volume, {}))
-    return inventory
+            mplist.append(volume)
+    return df_inventory(mplist)
 
-def check_df_netapp(volume, params, info):
-    # info columns: NAME SIZE USED
-    infolines = [ l for l in info if l[0] == volume ]
-    if len(infolines) == 0:
-        return (2, "CRIT - volume %s is missing" % volume )
-    elif len(infolines) > 1:
-        return (3, "UNKNOWN - Volume listed more than once!")
-
-    size_mb = int(infolines[0][1]) / 1024
-    used_mb = int(infolines[0][2]) / 1024
-    avail_mb = size_mb - used_mb
-
-    return df_check_filesystem(g_hostname, volume, size_mb, avail_mb, params)
+def check_df_netapp(item, params, info):
+    fslist = []
+    for mp, size_kb, used_kb in info:
+        if "patterns" in params or item == mp:
+            size_mb = int(size_kb) / 1024
+            used_mb = int(used_kb) / 1024
+            avail_mb = size_mb - used_mb
+            fslist.append((mp, size_mb, avail_mb))
+    return df_check_filesystem_list(item, params, fslist)
 
 def is_netapp_filer(oid):
     return "ontap" in oid(".1.3.6.1.2.1.1.1.0").lower() or \
