@@ -28,6 +28,8 @@
       "Room temperature (external thermal sensors)"
     * cisco_asa_failover: New Check for clustered Cisco ASA Firewalls 
     * cbl_airlaser.status: New Check for CBL Airlaser IP1000 laser bridge.
+    * df, hr_fs, etc.: Filesystem checks now support grouping (pools)
+      Please refer to the check manpage of df for details
 
     WATO:
     * Added permission to control the "clone host" feature in WATO
